# Fast-LIO2-Localization

./: README.md  example.launch.py
FAST_LIO/config/: fast_lio_relocalization_param.yaml  mid360.yaml
FAST_LIO/launch/: mapping.launch.py  relocalization.launch.py
FAST_LIO/src/: IMU_Processing.hpp  laserMapping.cpp  preprocess.cpp  preprocess.h
icp_relocalization/: CMakeLists.txt  README.md  package.xml
icp_relocalization/launch/: icp.launch.py  sac_ia_gicp.launch.py
icp_relocalization/rviz/: loam_livox.rviz
icp_relocalization/src/: icp_node.cpp  sac_ia_gicp.cpp  transform_publisher.cpp
