<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>icp_relocalization</name>
  <version>1.0.0</version>
  <description>ICP Relocalization</description>
  <maintainer email="1367256900@qq.com">PolarisXQ</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>pcl_ros</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
